--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yux.itfaqcurrency">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,13 +11,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ITFAQCurrency">
         <activity
-            android:name=".view.activities.MainActivity"
-            android:exported="true">
+            android:name=".view.activities.SplashActivity"
+            android:exported="true"
+            android:configChanges="orientation"
+            android:theme="@style/Theme.ITFAQCurrency.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".view.activities.MainActivity"
+        >
         </activity>
     </application>
 
